update to course page, fixed spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -513,7 +513,8 @@ label {
 }
 
 .course-img {
-    padding: 25px;
+    padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 
